# SMSM

./: CMakeLists.txt  main.cpp
src/algorithms/: CandidateManager.h  PBFAlgorithm.h  SICache.h  UB2DAlgorithm.h  UB2DStorage.cpp  UB2DStorage.h  UpperBoundManager.h  bf_tree_search.h  tree_search_iterative.h
src/structures/: StructureInterface.h  dataPoints_EuclidianDistance.h  data_points.h  facility_location.h  graph.h  graph_NegativeGroupFarness.h  graph_PartialDominatingSet.h
src/utility/: AlgorithmConfiguration.cpp  AlgorithmConfiguration.h  JSON_util.cpp  JSON_util.h  VectorOfVectors.h  data_point_generation.cpp  data_point_generation.h  graph_generation.cpp  graph_generation.h  util.cpp  util.h
